--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "functional": "cpp",
-        "atomic": "cpp"
+        "atomic": "cpp",
+        "string": "cpp"
     }
 }
